# turboquant-pytorch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  adaptive.py  algebra_foundations.py  bench_ablation.py  bench_compressed_inference.py  bench_inference.py  bench_models.py  bench_perplexity.py  bench_quantizers.py  bench_rotations.py  cariow.py  cd_algebra.py  cd_fidelity.py  cd_rotation.py  clifford_rotor.py  compare_vanilla_vs_modified.py  compressors.py  config.py  conftest.py  cpu_dispatch.py  cuda_ops.py  e8_quantizer.py  e8_rotation.py  formal_verify.py  gpu_dispatch.py  hierarchical.py  hybrid_pipeline.py  kmeans_vq.py  lattice_codebook.py  lattice_vq.py  lloyd_max.py  nsn_preprocess.py  profile_full_stack.py  profile_pipeline.py  pyproject.toml  quantization_force.py  (+22 more)
csrc/: fused_quantize.cu  setup.py
paper/: AUDIT.md  abstract_micro2026.txt  abstract_v10_final.txt  abstract_v2.txt  abstract_v3.txt  abstract_v4.txt  abstract_v5_final.txt  abstract_v6.txt  abstract_v7.txt  abstract_v8.txt  abstract_v9.txt  main.aux  main.tex  micro2026.aux  micro2026.tex
