[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.2.0"
description = "Structured rotations and lattice quantization for KV cache compression via Cayley-Dickson algebra"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Oichkatzelesfrettschen"},
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0,<3.0",
    "scipy>=1.10.0,<2.0",
]

[project.optional-dependencies]
models = [
    "transformers>=4.40.0,<6.0",
    "accelerate>=0.25.0,<2.0",
    "bitsandbytes>=0.43.0,<1.0",
]
test = [
    "pytest>=7.0,<9.0",
    "hypothesis>=6.0,<7.0",
]
verify = [
    "z3-solver>=4.12,<5.0",
]
all = [
    "turboquant[models,test,verify]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["turboquant*"]
exclude = ["tests*", "bench*"]

[tool.setuptools]
py-modules = [
    "cd_algebra", "cd_fidelity", "cd_rotation", "clifford_rotor",
    "compressors", "config", "cpu_dispatch", "gpu_dispatch",
    "e8_quantizer", "e8_rotation", "hierarchical", "hybrid_pipeline",
    "kmeans_vq", "lattice_codebook", "lattice_vq", "lloyd_max",
    "nsn_preprocess", "rotations", "sign_pack", "spectral",
    "tensor_decomposition", "triton_kernels", "turboquant",
    "adaptive", "algebra_foundations", "cariow", "cuda_ops", "zd_bias",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short --import-mode=importlib"
markers = [
    "slow: Z3 SMT proofs (deselect with -m 'not slow')",
]
filterwarnings = [
    "default",
    "ignore::FutureWarning",
    "ignore::DeprecationWarning:bitsandbytes",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long -- research code has long equations/comments
    "E402",   # import not at top -- needed for importlib bootstrap in bench/test files
    "E741",   # ambiguous variable name -- math code uses standard notation (l, O, I)
    "F841",   # unused variable -- some assigned for debugging/readability
    "F541",   # f-string without placeholders -- used as descriptive labels
    "E702",   # multiple statements on one line -- used for gc.collect(); torch.cuda.empty_cache()
    "E701",   # multiple statements on one line (colon)
    "E731",   # lambda assignment
]

[tool.ruff.lint.per-file-ignores]
"bench_*.py" = ["F401", "E402"]
"test_*.py" = ["F401"]
"profile_*.py" = ["F401", "E402"]
"compare_*.py" = ["F401", "E402"]
"validate.py" = ["F401", "E402"]
"formal_verify.py" = ["F401", "E402", "F541"]
"conftest.py" = ["F401"]
"__init__.py" = ["F401"]  # re-exports are the purpose of __init__.py
